--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <table cellspacing = 20>
             <tr>
-                <td><image src = "zoro-modified.png" alt = "Abishek Zoro Picture"></image></td>
+                <td><image src = "Images/zoro-modified.png" alt = "Abishek Zoro Picture"></image></td>
                 <td><h1>My name is Abishek</h1>
                     <p><em>Analytics Engineer at <strong><a href = "https://www.pinterest.com/" target = "_blank">Pinterest</a></strong></em></p>
                     <p>Self-motivated and passionate data analyst with two years of experience 
