--- a/index.html
+++ b/index.html
@@ -1,97 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Abishek's Site</title>
-    </head>
-    <body>
-        <table cellspacing = 20>
-            <tr>
-                <td><image src = "Images/zoro-modified.png" alt = "Abishek Zoro Picture"></image></td>
-                <td><h1>My name is Abishek</h1>
-                    <p><em>Analytics Engineer at <strong><a href = "https://www.pinterest.com/" target = "_blank">Pinterest</a></strong></em></p>
-                    <p>Self-motivated and passionate data analyst with two years of experience 
-                        analyzing business processes. Eager to leverage data interpreting and 
-                        visualizing skills to drive growth and support the analytics team. 
-                        In recent roles, automated multiple processes using Python frameworks 
-                        reducing manual labor on an average of 80%.</p>
-                </td>
-            </tr>    
-        </table>
+<head>
+    <meta charset="UTF-8">
+    <title>Abishek Naidu</title>
+    <link rel="stylesheet" href="CSS/stylesheet.css">
+    <link rel="icon" href="images/favicon.ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
+</head>
+<body>
+    <div class="top-container">
+        <img class="top-cloud"src="images/cloud.png" alt="cloud-image">
+        <h1>I'm Abishek</h1>
+        <h2 id="subheading">A <span class = "pro">pro</span>grammer.</h2>
+        <img class="bottom-cloud" src="images/cloud.png" alt="cloud-image">
+        <img class="mountain" src="images/mountain.png" alt="mountain">
+    </div>
+
+    <div class="middle-container">
+        <div class="profile">
+            <img id="profile-image" src="images/profile-image.png" alt="profile-image">
+            <h2>Hello!</h2>
+            <p class = "intro">I am a Analytics Engineer aspiring to become a Web Developer. I enjoy hiking and good conversations.</p>
+        </div>
         <hr>
-        <h3>Education</h3>
-        <ul>
-            <li>The University of Texas at Dallas</l1>
-                <ul>
-                    <li>Master of Science - MS, Management Information Systems</li>
-                </ul>
-            <li>Harvard Business School Online</li>
-                <ul>
-                    <li>Business Analytics Certification</li>
-                </ul>
-            <li>Stanford University</li>
-                <ul>
-                    <li>Machine Learning Certification</li>
-                </ul>
-            <li>Meenakshi Sundararajan Engineering College</li>
-                <ul>
-                    <li>Bachelor of Engineering (BEng), Computer Science</li>
-                </ul>
-            <li>National Public School</li>
-                <ul>
-                    <li>High School, Computer Science</li>
-                </ul>
-        </ul>
+        <div class="skills">
+            <h2>My Skills.</h2>
+            <div class="skill-row">
+                <img class="analytics-image" src="images/skills-analytics-image.gif" alt="skills-analytics-giphy.com">
+                <h3>Analytics Engineer</h3>
+                <p>I am currently an Analytics Egineer at Pinterest with knowledge coding in SQL, and Python. I also have exprience with AirFlow and Tableau</p>
+            </div>
+            <div class="skill-row">
+                <img class="webdev-image" src="https://media.giphy.com/media/UVG0BN8TOMKkPOJS6e/giphy.gif" alt="skills-webdev-giphy.com">
+                <h3>Web Developer</h3>
+                <p>I am currently learning Web Development as a means of upskilling myself and taking up new projects that will challenge me</p>
+            </div>
+        </div>
         <hr>
-        <h3>Work Experience</h3>
-        <table cellspacing = 10>
-            <thead>
-                <th>Dates</th>
-                <th>Work</th>
-            </thead>
-            <tr>
-                <td>2020</td>
-                <td>Analytics Engineer at Pinterest</td>
-            </tr>
-            <tr>
-                <td>2020-2020</td>
-                <td>Data Analyst at Facebook (via Insight Global)</td>
-            </tr>
-        </table>
-        <hr>
-        <h3>Skills</h3>
-        <table border = 1>
-            <tr>
-                <td>
-                    <table cellspacing = 10>
-                        <tr>
-                            <td>SQL</td>
-                            <td>⭐⭐⭐⭐⭐</td>
-                        </tr>
-                        <tr>
-                            <td>Python</td>
-                            <td>⭐⭐⭐</td>
-                        </tr>
-                    </table>
-                </td>
-                <td>
-                    <table cellspacing = 10>
-                        <tr>
-                            <td>Tableau</td>
-                            <td>⭐⭐⭐⭐⭐</td>
-                        </tr>
-                        <tr>
-                            <td>Airflow</td>
-                            <td>⭐⭐</td>
-                        </tr>
-                    </table>
-                </td>
-            </tr>
-        </table>
-        
-        <hr>
-        <a href="Volunteering.html" target="_blank">Volunteering</a>
-        <br>
-        <a href="Contact.html" target="_blank">Contact Information</a>
-    </body>
+        <div class="contact-me">
+            <h2>Get In Touch</h2>
+            <h3>Want to chat or looking for someone with my skills?</h3>
+            <p class = "contact-message">Up for a quick chat or looking for someone with my skills who is entusiastic to learn and apply themself.</p>
+            <a class="btn" type="button" href="mailto:abishek.naidu.96@gmail.com">CONTACT ME</a>
+        </div>
+    </div>
+
+    <div class="bottom-container">
+        <a class="footer-link" target="_blank" href="https://www.linkedin.com/in/abisheknaidu/">LinkedIn</a> | 
+        <a class="footer-link" target="_blank" href="https://abisheknaidu96.github.io/CV/">Website</a> | 
+        <a class="footer-link" target="_blank" href="https://github.com/AbishekNaidu96">GitHub</a>
+        <p id="copyright">© 2023 Abishek Naidu</p>
+    </div>
+</body>
 </html>
